app01/base/1-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app-01
  namespace: application-01
  labels:
    app: app-01
    app.kubernetes.io/component: app-01
    app.kubernetes.io/instance: app-01
    app.kubernetes.io/name: app-01
    app.openshift.io/runtime: httpd
    app.openshift.io/runtime-version: 2.4-el7
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-01
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: app-01
        deployment: app-01
    spec:
      containers:
        - name: app-01
          image: >-
            image-registry.openshift-image-registry.svc:5000/application-01/app-01@sha256:b1c058b4fe2d86d9083a57655c435e155e1e4fcfd54977cbb43909f1dd2c24dd
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
